--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.5",
+    "swr": "^2.2.0",
     "typescript": "5.1.6"
   }
 }
