--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "npm": "^9.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.5",
     "swr": "^2.2.0",
     "typescript": "5.1.6"
